feat: temel HTML iskeleti + stil ve ilk JS etkileşimi

--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
-<!doctype html><meta charset="utf-8"><title>Hello</title>
-<link rel="stylesheet" href="style.css">
-<h1>Merhaba Bora 👋</h1>
-<script src="script.js"></script>
+<!doctype html>
+<html lang="tr">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>cbatursite</title>
+  <link rel="stylesheet" href="./style.css" />
+</head>
+<body>
+  <header class="container">
+    <h1>Merhaba Bora 👋</h1>
+    <p>Bu site A→Z web eğitimimizin ilk adımı.</p>
+    <button id="sayHiBtn">Bana Tıkla</button>
+  </header>
+
+  <script src="./script.js"></script>
+</body>
+</html>
