--- a/index.html
+++ b/index.html
@@ -7,11 +7,73 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-  <header class="container">
-    <h1>Merhaba Bora 👋</h1>
-    <p>Bu site A→Z web eğitimimizin ilk adımı.</p>
-    <button id="sayHiBtn">Bana Tıkla</button>
+  <!-- NAVBAR -->
+  <nav class="nav">
+    <div class="nav-inner">
+      <a class="brand" href="#">cbatursite</a>
+
+      <!-- mobil menü butonu -->
+      <button id="menuToggle" class="menu-btn" aria-label="Menüyü Aç/Kapat">
+        ☰
+      </button>
+
+      <!-- menü öğeleri -->
+      <ul id="navLinks" class="links">
+        <li><a href="#hero">Ana Sayfa</a></li>
+        <li><a href="#feat">Özellikler</a></li>
+        <li><a href="#cont">İletişim</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- HERO -->
+  <header id="hero" class="hero container">
+    <h1>Modern, Hızlı ve Basit 🚀</h1>
+    <p>Bu siteyi A→Z birlikte inşa ediyoruz. HTML + CSS + JS + Git + Deploy.</p>
+    <div class="cta">
+      <a class="btn primary" href="#feat">Başla</a>
+      <button id="sayHiBtn" class="btn ghost">Bana Tıkla</button>
+    </div>
   </header>
+
+<section id="feat" class="container">
+  <h2>Özellikler</h2>
+  <p>Küçük bir grid ile kartlarımızı gösterelim.</p>
+
+  <div class="grid">
+    <article class="card">
+      <div class="card-head">
+        <span class="badge">⚡</span>
+        <h3>Hızlı Kurulum</h3>
+      </div>
+      <p>HTML/CSS/JS ile sade, hızlı ve anlaşılır yapı.</p>
+      <a class="card-link" href="#hero">Detay</a>
+    </article>
+
+    <article class="card">
+      <div class="card-head">
+        <span class="badge">🧩</span>
+        <h3>Modüler Tasarım</h3>
+      </div>
+      <p>Bölümler ayrık; eklemek/çıkarmak kolay.</p>
+      <a class="card-link" href="#feat">Detay</a>
+    </article>
+
+    <article class="card">
+      <div class="card-head">
+        <span class="badge">🚀</span>
+        <h3>Kolay Deploy</h3>
+      </div>
+      <p>GitHub Pages ile ücretsiz ve anında yayın.</p>
+      <a class="card-link" href="#cont">Detay</a>
+    </article>
+  </div>
+</section>
+
+  <section id="cont" class="container">
+    <h2>İletişim</h2>
+    <p>Buraya basit bir form ekleyeceğiz.</p>
+  </section>
 
   <script src="./script.js"></script>
 </body>
